unpackaged/main/default/objects/conference360__Form_Element_Condition__c/fields/conference360__Condition_Operator__c.field-meta.xml
<CustomField>
    <fullName>conference360__Condition_Operator__c</fullName>
    <label>Condition Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contains</fullName>
            </value>
            <value>
                <fullName>Equals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>