unpackaged/main/default/objects/conference360__Form_Element_Condition__c/fields/conference360__Form_Element__c.field-meta.xml
<CustomField>
    <fullName>conference360__Form_Element__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The controlling form element</inlineHelpText>
    <label>Form Element</label>
    <referenceTo>conference360__Form_Element__c</referenceTo>
    <relationshipLabel>Form Element Conditions</relationshipLabel>
    <relationshipName>Form_Element_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>