unpackaged/main/default/objects/conference360__Form_Element_Condition__c/fields/conference360__Next_Form_Element__c.field-meta.xml
<CustomField>
    <fullName>conference360__Next_Form_Element__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Form Element</label>
    <referenceTo>conference360__Form_Element__c</referenceTo>
    <relationshipLabel>Form Element Conditions (Next Form Element)</relationshipLabel>
    <relationshipName>Form_Element_Conditions1</relationshipName>
    <type>Lookup</type>
</CustomField>